# gwark

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  process_editorial_tasks.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: claude-progress.md  claude-state.json  settings.local.json  sync-cache.json
.claude/agents/: asus-router-expert.md  google-workspace-expert.md
.claude/commands/: agent-genesis.md  roadmap.md
.claude/skills/gwark-docs/references/: editing-patterns.md
.claude/skills/gwark-email/: SKILL.md
.claude/skills/gwark-ops/: SKILL.md
.claude/skills/gwark-ops/references/: themes.md
.claude/skills/gwark-playbook-triage/: SKILL.md
.claude/skills/gwark-sheets/: SKILL.md
.claude/skills/gwark-slides/: SKILL.md
.claude/skills/gwark-triage/: SKILL.md
.github/workflows/: tests.yml
.gwark/: config.yaml
.gwark/profiles/: default.yaml  work.yaml
cloudflare-mcp/: .dev.vars.example  README.md  package.json  tsconfig.json  wrangler.toml
cloudflare-mcp/docs/: OAUTH_SETUP.md
cloudflare-mcp/src/: index.ts  oauth.ts  types.ts
cloudflare-mcp/src/durable-objects/: session.ts
config/: README.md  config.example.yaml  logging.yaml  oauth2_credentials.example.json  server_config.example.yaml
config/profiles.example/: work.yaml
docs/: GOOGLE_API_THREADING.md  OAUTH_SETUP.md  PLAN.md  QUICKSTART.md  ROADMAP.md  SETUP.md  TRIAGE_WORKFLOW.md
examples/: basic_usage.py  client_example.json
scripts/: calendar_meetings.py  drive_activity.py  email_search.py  email_search_simple.py  email_summarizer.py  sent_email_analyzer.py  sent_emails_direct.py  sent_emails_simple.py  sent_emails_work_analyzed.py  setup_oauth.py  test_connection.py  test_field_masks.py
scripts/_deprecated/: sent_emails_work_analyzed.py
skills/gwark-docs/: SKILL.md
skills/gwark-drive/: SKILL.md
skills/gwark-drive/references/: drive-queries.md
skills/gwark-email/: SKILL.md
skills/gwark-email/references/: gmail-query-syntax.md
skills/gwark-forms/: SKILL.md
skills/gwark-ops/: SKILL.md
skills/gwark-sheets/: SKILL.md
skills/gwark-slides/: SKILL.md
skills/gwark-triage/: SKILL.md
src/gmail_mcp/: __init__.py  __main__.py
src/gmail_mcp/ai/: __init__.py  classifier.py  sender_signals.py  summarizer.py
src/gmail_mcp/auth/: __init__.py  credential_store.py  credentials.py  oauth.py  oauth2.py  token_manager.py
src/gmail_mcp/cache/: __init__.py  email_cache.py  pagination.py  strategies.py
src/gmail_mcp/config/: __init__.py  constants.py  settings.py
src/gmail_mcp/gmail/: __init__.py  batch.py  client.py  fields.py  filters.py  operations.py
src/gmail_mcp/server/: __init__.py  handlers.py  mcp_server.py  schemas.py
src/gmail_mcp/utils/: __init__.py  email_helpers.py  logging.py  rate_limiter.py  validators.py
src/gwark/: __init__.py  __main__.py  main.py
src/gwark/commands/: __init__.py  calendar.py  config.py  docs.py  docs_review.py  docs_review_batch.py  drive.py  email.py  forms.py  sheets.py  slides.py  workflow.py
src/gwark/core/: __init__.py  async_utils.py  batch_fetch.py  batch_summarizer.py  config.py  constants.py  dates.py  docs_analyzer.py  docs_comments.py  email_utils.py  markdown_converter.py  output.py  sheets_client.py  slides_client.py
src/gwark/schemas/: __init__.py  config.py  themes.py
src/gwark/ui/: __init__.py  progress.py  viewer.py
src/gwark/workflows/: __init__.py  base.py  report.py  triage.py
tests/: __init__.py  conftest.py  test_cli_smoke.py  test_senders.py
tests/fixtures/: mock_emails.json  mock_responses.py
tests/unit/: test_async_utils.py  test_config.py  test_dates.py  test_email_utils.py
