[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwark"
version = "0.3.1"
description = "Google Workspace CLI — email, calendar, drive, docs, sheets, slides, forms from the terminal"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gmail MCP Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # MCP SDK
    "mcp>=0.9.0",

    # Gmail API
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.116.0",

    # Async support
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "asyncio-throttle>=1.0.1",

    # Configuration & validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",

    # CLI & TUI
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.47.0",

    # Caching
    "cachetools>=5.3.0",

    # Security & encryption
    "cryptography>=41.0.0",

    # Utilities
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",

    # Markdown parsing (for docs module)
    "mistune>=3.0.0",

    # Google Sheets (gspread)
    "gspread>=6.0.0",
]

[project.optional-dependencies]
sheets = [
    "gspread-dataframe>=4.0.0",
    "gspread-formatting>=1.1.0",
    "pandas>=2.0.0",
]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",

    # Code quality
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",

    # Type stubs
    "types-python-dateutil",
    "types-pytz",
    "types-cachetools",
]

[project.scripts]
gmail-mcp = "gmail_mcp.__main__:main"
gwark = "gwark.main:app"

[project.urls]
Homepage = "https://github.com/yourusername/gmail-mcp"
Documentation = "https://github.com/yourusername/gmail-mcp/docs"
Repository = "https://github.com/yourusername/gmail-mcp"
Issues = "https://github.com/yourusername/gmail-mcp/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gmail_mcp*", "gwark*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=gmail_mcp --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.clique]
description = "Gmail integration - messages, threads, labels, search"
resources = ["messages", "threads", "labels", "search", "calendar", "drive", "forms", "docs", "sheets"]
auth = "oauth2"
status = "stable"
env-key = ""
api-url = "https://console.cloud.google.com/apis/credentials"
system-deps = []
setup-notes = "Requires Google OAuth2 credentials -- run 'gwark auth login' to authenticate"

[tool.uv]
exclude-newer = "7 days"
